--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="diary_entry_back_alert_dialog_message">Save changes made to this entry?</string>
     <string name="diary_entry_back_alert_save_new_entry_title">Save entry?</string>
     <string name="diary_entry_back_alert_save_new_entry_message">Do you want to save this new entry?</string>
+    <string name="diary_entry_no_routines_string">press ADD/REMOVE to add a routine to this diary entry</string>
 
     <!-- Ingredient Strings -->
     <string name="ingredient_name_string">Ingredient Name</string>
@@ -104,6 +105,7 @@
     <string name="product_delete_alert_dialog__title">Delete product?</string>
     <string name="product_back_alert_dialog_title">Save product?</string>
     <string name="product_back_alert_dialog_message">Do you want to save this new product?</string>
+    <string name="product_no_ingredients_to_display">press ADD/REMOVE to add an ingredient to this product</string>
 
     <string name="product_types_none">--</string>
     <string name="product_types_cleanser">Cleanser</string>
@@ -159,6 +161,7 @@
     <string name="routine_delete_alert_dialog_message">Are you sure you want to delete this routine?</string>
     <string name="routine_back_alert_dialog_title">Save Changes?</string>
     <string name="routine_back_alert_dialog_message">Save changes made to this routine?</string>
+    <string name="routine_no_products_text_string">press ADD/REMOVE to add a product to this routine</string>
 
     <!-- Item List Dialog Strings -->
     <string name="item_list_select_ingredients">Select ingredients</string>
