--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_view_db">View Database</string>
     <string name="action_go_to_date">Scroll to date…</string>
     <string name="main_demo_text_first">Welcome to My Daily Skincare! \n\n Manage and track your daily routines and skin condition!</string>
-    <string name="main_demo_text_second">Tap a date on the calendar to go to that date\'s diary entry.</string>
+    <string name="main_demo_text_second">Tap a date on the calendar to go to that date\'s diary entry. \n\n When you return to this screen that date on the calendar will be colored to reflect your skin\'s overall condition on that date.</string>
     <string name="main_demo_text_third">Open the navigation menu at the top of the screen to manage your routines, products, ingredients and analytics tools.</string>
     <string name="main_demo_get_started">GET STARTED</string>
 
@@ -15,14 +15,6 @@
     <string name="navigation_products">Products</string>
     <string name="navigation_ingredients">Ingredients</string>
     <string name="navigation_analytics">Analytics</string>
-    <string-array name="drawer_strings">
-        <item>Today\'s Diary Entry</item>
-        <item>Routines</item>
-        <item>Products</item>
-        <item>Ingredients</item>
-        <item>Analytics</item>
-        <item>Clear Database *FOR TESTING*</item>
-    </string-array>
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
 
@@ -97,7 +89,7 @@
     <string name="diary_entry_back_alert_save_new_entry_title">Save entry?</string>
     <string name="diary_entry_back_alert_save_new_entry_message">Do you want to save this new entry?</string>
     <string name="diary_entry_no_routines_string">press ADD/REMOVE to add a routine to this diary entry</string>
-    <string name="diary_entry_demo_text_first">Here you can document the condition of your skin, the routines you applied and other lifestyle metrics for this date.</string>
+    <string name="diary_entry_demo_text_first">A diary entry details the conditions of your skin, the routines you applied and other lifestyle metrics for a date.</string>
     <string name="diary_entry_demo_text_second">Routines specified to be applied daily or on this day of the week will be added automatically. \n\nPress the ADD/REMOVE button to include other routines or remove routines.</string>
     <string name="diary_entry_demo_text_third">We recommend filling out your diary entry at the end of your day so you can accurately document your lifestyle levels!</string>
 
@@ -185,6 +177,8 @@
     <string name="routine_back_alert_dialog_message">Save changes made to this routine?</string>
     <string name="routine_no_products_text_string">press ADD/REMOVE to add a product to this routine</string>
     <string name="routine_main_no_routines">press the button below to add a new routine</string>
+    <string name="routine_demo_text_first">A routine is one or more products that are applied successively with some regularity.</string>
+    <string name="routine_demo_text_second">Here you can manage a routine by setting the products included in this routine, the time of day the routine is applied and how often the routine is applied.</string>
 
     <!-- Item List Dialog Strings -->
     <string name="item_list_select_ingredients">Select ingredients</string>
